# imgui-docking-sfml-starter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: DefaultCompilerOptionsAndWarnings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  main.cpp
